--- a/.env.local.example
+++ b/.env.local.example
@@ -7,6 +7,9 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your_storage_bucket
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id
 NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id
 
+FIREBASE_SERVICE_ACCOUNT=your_service_account
+
+
 # Stripe Configuration
 # Get these from your Stripe dashboard
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your_publishable_key
