google 認証情報のapiキー設定

--- a/.env.local.example
+++ b/.env.local.example
@@ -20,3 +20,7 @@ STRIPE_WEBHOOK_SECRET=your_webhook_secret
 # Mock Mode
 # Set to true to enable mock mode for development without real payments/DB
 NEXT_PUBLIC_MOCK_MODE=false
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+NEXTAUTH_URL=
