--- a/.env.local.example
+++ b/.env.local.example
@@ -21,6 +21,6 @@ STRIPE_WEBHOOK_SECRET=your_webhook_secret
 # Set to true to enable mock mode for development without real payments/DB
 NEXT_PUBLIC_MOCK_MODE=false
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
-NEXTAUTH_URL=
+GOOGLE_CLIENT_ID=xxxx
+GOOGLE_CLIENT_SECRET=xxxx
+NEXTAUTH_URL=xxxx
