--- a/.env.local.example
+++ b/.env.local.example
@@ -1,26 +1,17 @@
-# Firebase Configuration
-# Get these from your Firebase project settings
-NEXT_PUBLIC_FIREBASE_API_KEY=your_api_key
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your_auth_domain
-NEXT_PUBLIC_FIREBASE_PROJECT_ID=your_project_id
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your_storage_bucket
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id
-NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id
+# When set to 'true', the app uses mock data instead of live Firebase/Stripe.
+# For production, remove this line or set it to 'false'.
+NEXT_PUBLIC_MOCK_MODE=true
 
-FIREBASE_SERVICE_ACCOUNT=your_service_account
+# Stripe API keys
+# Replace with your actual Stripe keys for production.
+STRIPE_SECRET_KEY=your_stripe_secret_key_here
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key_here
 
+# Stripe Webhook secret
+# Get this from your Stripe dashboard's webhook settings.
+STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret_here
 
-# Stripe Configuration
-# Get these from your Stripe dashboard
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your_publishable_key
-STRIPE_SECRET_KEY=your_secret_key
-STRIPE_WEBHOOK_SECRET=your_webhook_secret
-
-
-# Mock Mode
-# Set to true to enable mock mode for development without real payments/DB
-NEXT_PUBLIC_MOCK_MODE=false
-
-GOOGLE_CLIENT_ID=xxxx
-GOOGLE_CLIENT_SECRET=xxxx
-NEXTAUTH_URL=xxxx
+# Firebase Admin SDK credentials
+# This is a base64-encoded JSON of your Firebase service account key.
+# Use a tool to encode your service account JSON file to a single line.
+FIREBASE_ADMIN_SDK_BASE64=your_base64_encoded_firebase_admin_sdk_here
